--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <!--FORMULARIO DE CONTACTO-->
 	
 			<form action="enviar.php" method="post">
-				<h2>ESCRIBINOS</h2>
+				<h2>DEJANOS TU CONSULTA</h2>
                 <div class="contenedor-formulario">
                     <div class="formulario">
                         <input type="text" name="nombre" placeholder="Nombre" required >
