--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <a href="#inicio"  class="nav-item nav-link ">Inicio</a>
-                    <a href="#nosotros" class="nav-item nav-link">Nosotros</a>
+                    <a href="#nosotros" class="nav-item nav-link">Empresa</a>
                     <a href="#servicios" class="nav-item nav-link">Servicios</a>
                     <a href="#sabias" class="nav-item nav-link">¿Sabias que?</a>
                     <a href="#contacto" class="nav-item nav-link">Contacto</a>
@@ -87,7 +87,7 @@
 
     <section id="nosotros" class="nosotros">
         <br><br>
-        <h2>NOSOTROS</h2>
+        <h2EMPRESA</h2>
         <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
