--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <section id="nosotros" class="nosotros">
         <br><br>
-        <h2EMPRESA</h2>
+        <h2>EMPRESA</h2>
         <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
