--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <a href="#inicio"  class="nav-item nav-link ">Inicio</a>
-                    <a href="#nosotros" class="nav-item nav-link">Empresa</a>
+                    <a href="#empresa" class="nav-item nav-link">Empresa</a>
                     <a href="#servicios" class="nav-item nav-link">Servicios</a>
                     <a href="#sabias" class="nav-item nav-link">¿Sabias que?</a>
                     <a href="#contacto" class="nav-item nav-link">Contacto</a>
@@ -85,7 +85,7 @@
 
     <!--Section 1-->
 
-    <section id="nosotros" class="nosotros">
+    <section id="empresa" class="empresa">
         <br><br>
         <h2>EMPRESA</h2>
         <br>
